--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "coverage": "lab -s -r lcov | coveralls"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "blipp": "^2.1.3",
     "good": "^6.1.2",
     "good-console": "^5.0.0",
